# emberfall-chronicles

./: .gitignore  LICENSE  OVERNIGHT_LOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/emberfall/: __init__.py  cli.py  engine.py  models.py
tests/: test_engine.py
