[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "emberfall-chronicles"
version = "0.1.0"
description = "A retro fantasy RPG engine and playable terminal adventure in Python."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Mecha Igor + Hermes"}]
keywords = ["rpg", "retro", "fantasy", "terminal", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Games/Entertainment :: Role-Playing",
]
dependencies = []

[project.scripts]
emberfall = "emberfall.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/emberfall"]
